added html code to show image and names fetched by api

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.9-1/crypto-js.js"></script>
 </head>
 <body>
-    <div class="container">
-        <div id="data">
-            hello
+    <div id="data">
+        hello
+    </div>
+    <div class="container" id="container">
+        <div class="row row-cols-3 g-3" id="cards-container">
         </div>
-        <pre id="json-data"></pre>
-       
     </div>
 
     <p>Data provided by Marvel. © 2014 Marvel</p>
