--- a/pages/details.html
+++ b/pages/details.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Super Hero Hunter App</title>
+    <title>Super hero details</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">    <!-- Linking the css file -->
     <link rel="stylesheet" href="styles.css" type="text/css">
     <!-- Include CryptoJS from CDN -->
@@ -13,10 +13,7 @@
     <div id="data">
         hello
     </div>
-    <div class="container" id="container">
-        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4" id="cards-container">
-        </div>
-    </div>
+    
 
     <p>Data provided by Marvel. © 2014 Marvel</p>
     <!-- Linking the javascript file -->
