added auto suggestion serch bar

--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.9-1/crypto-js.js"></script>
 </head>
 <body>
-    <div id="data">
-        hello
-    </div>
+    
+    <!--Make sure the form has the autocomplete function switched off:-->
+    <input type="text" id="searchInput" placeholder="Search characters...">
+    <ul id="characterList"></ul>
+
     <div class="container" id="container">
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4" id="cards-container">
         </div>
