--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
     
     <!--Make sure the form has the autocomplete function switched off:-->
     <input type="text" id="searchInput" placeholder="Search characters...">
+
+    <aside>
+        <aside>
+            <h2>Product Basket</h2>
+            <ul id="cart"></ul>
+            <div id="total">Total </div>
+        </aside>
+    </aside>
+
     <ul id="characterList"></ul>
 
     <div class="container" id="container">
