--- a/index.html
+++ b/index.html
@@ -13,15 +13,10 @@
     
     <!--Make sure the form has the autocomplete function switched off:-->
     <input type="text" id="searchInput" placeholder="Search characters...">
-
-    <aside>
-        <aside>
-            <h2>Product Basket</h2>
-            <ul id="cart"></ul>
-            <div id="total">Total </div>
-        </aside>
-    </aside>
-
+    <br>
+    <button type="button" class="btn btn-primary" onclick="showFavList()">Favourites</button>
+        <ul id="FavList"></ul>
+    <br>
     <ul id="characterList"></ul>
 
     <div class="container" id="container">
