--- a/index.html
+++ b/index.html
@@ -10,19 +10,37 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.9-1/crypto-js.js"></script>
 </head>
 <body>
-    
-    <!--Make sure the form has the autocomplete function switched off:-->
-    <input type="text" id="searchInput" placeholder="Search characters...">
-    <br>
-    <button type="button" class="btn btn-primary" onclick="showFavList()">Favourites</button>
-        <ul id="FavList"></ul>
-    <br>
-    <ul id="characterList"></ul>
+    <header>
+        <nav class="navbar fixed-top navbar-dark bg-dark">
+            <!-- Navbar content -->
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">Super Hero Hunter</a>
 
-    <div class="container" id="container">
-        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4" id="cards-container">
+                <ul class="nav navbar-nav mr-auto">
+                    <li class="active">
+                        <a href="#" onclick="showFavList()">Favourites</a>
+                        <ul id="FavList"></ul>
+                    </li>
+                </ul>
+                <form class="form-inline my-2 my-lg-0">
+                    <input class="form-control mr-sm-2" type="text" id="searchInput" placeholder="Search Hero's..." aria-label="Search">
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                </form>
+            </div>
+        </nav>
+    </header>
+    <!--Make sure the form has the autocomplete function switched off:-->
+    <main role="main" >
+        <div class="container-fluid">
+            <div class="row flex-xl-nowrap">
+                <ul id="characterList"></ul>
+                <div class="container" id="container">
+                    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4" id="cards-container">
+                    </div>
+                </div>
+            </div>
         </div>
-    </div>
+    </main>
 
     <p>Data provided by Marvel. © 2014 Marvel</p>
     <!-- Linking the javascript file -->
