--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
     <!--Make sure the form has the autocomplete function switched off:-->
     <main role="main" >
         <div class="container">
-            <div class="row align-items-start">     
+            <!-- <div class="row align-items-start">      -->
                 <div class="container" id="container">        
                     <div id="cards-container">
                         
                     </div>
                 </div>
-            </div>
+            <!-- </div> -->
         </div>
     </main>
 
