--- a/index.html
+++ b/index.html
@@ -11,22 +11,31 @@
 </head>
 <body>
     <header>
-        <nav class="navbar fixed-top navbar-dark bg-dark">
-            <!-- Navbar content -->
-            <div class="container-fluid">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+            <div class="container">
                 <a class="navbar-brand" href="#">Super Hero Hunter</a>
 
-                <ul class="nav navbar-nav mr-auto">
-                    <li class="active">
-                        <a href="#" onclick="showFavList()">Favourites</a>
-                        <ul id="FavList"></ul>
-                    </li>
-                </ul>
-                <form class="form-inline my-2 my-lg-0">
-                    <input class="form-control mr-sm-2" type="text" id="searchInput" placeholder="Search Hero's..." aria-label="Search">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                    <ul id="characterList"></ul>
-                </form>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#" onclick="showFavList()">Favourites</a>
+                            <ul id="FavList"></ul>
+                        </li>
+                    </ul>
+
+                    <form class="form-inline my-2 my-lg-0">
+                        <input class="form-control mr-sm-2" type="text" id="searchInput" placeholder="Search Hero's..." aria-label="Search">
+                        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                        <div class="autocom-box row">
+                            <ul id="characterList"></ul>
+                        </div>
+                    </form>
+                </div>
             </div>
         </nav>
     </header>
