--- a/details.html
+++ b/details.html
@@ -63,15 +63,15 @@
 
     <!-- START FOOTER DARK-->
     <footer class="py-3 my-4 bg-dark">
-        <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Features</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Pricing</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
-        </ul>
-        <p class="text-center text-muted">Data provided by Marvel. © 2014 Marvel</p>
+      <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+        <li class="nav-item"><a href="rushabh.mahawarkar@gmail.com" class="nav-link px-2 text-muted">Email</a></li>
+        <li class="nav-item"><a href="https://www.linkedin.com/in/rushabh-mahawarkar-7727301a3/" class="nav-link px-2 text-muted">LinkedIN</a></li>
+        <li class="nav-item"><a href="https://github.com/Rushabh025" class="nav-link px-2 text-muted">Github</a></li>
+      </ul>
+      <p class="text-center text-muted">Data provided by Marvel. © 2014 Marvel</p>
+      <p class="text-center text-muted">Created By Rushabh Mahawarkar</p>
     </footer>
+
     <!-- Linking the javascript file -->
     <script src="details.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
