Updated add to fav function in details page

--- a/details.html
+++ b/details.html
@@ -54,7 +54,7 @@
                     <p id = 'description'></p>
                     <hr class="my-4">
                     <p class="lead">
-                      <a class="btn btn-primary Fav" href="#" role="button">Add To Favourite</a>
+                      <a class="btn btn-primary Fav" href="#" role="button" onclick="add()">Add To Favourite</a>
                     </p>
                 </div>
                 <div class=" col-md">
